methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: x is already defined as variable x
  var x=isFacingWall()
      ^SlugTracking:13: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
      return getGroundColor()
                           ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if(x==true){
  ^