methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
 var x=true
  var x=isFacingWall()
  if(x==true){
        return false;
        
 
      if(getGroundColor()!=Color.green){
        backward();
        return false
      }
      return getGroundColor()
      return isFacingWall()
    }
}
        
        
        
     
      